--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-Lightning.js
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Lightning.js</title>
+  <style>
+    body {
+      background-color: #282828;
+      background-image: url('bg.png');
+      color: #4D4D4D;
+      font-family: Helvetica,Arial,sans-serif;
+    }
+    .container {
+      width: 550px;
+      margin: 50px auto 0px auto;
+    }
+    header {
+      text-align: center;
+    }
+    header h1 {
+      display: none;
+    }
+    header #tagline {
+      margin-top: 20px;
+      background-color: #282828;
+      border-top: #161616;
+      border-left: #161616;
+      padding: 5px 10px;
+      box-shadow: inset 1px 1px 5px #111, 1px 1px 1px #333;
+      border-radius: 5px;
+    }
+    header #tagline h2 {
+      font-size: 1.25em;
+      text-shadow: 1px 1px 0px #111;
+    }
+    header #tagline h2 em {
+      color: #666;
+      font-style: normal;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <header>
+      <h1>Lightning.js - A Safe, Fast, Asynchronous 3rd Party Javascript Embed Code</h1>
+      <img src="logo.png" />
+      <div id="tagline">
+        <h2>LightningJS is a <em>safe</em>, <em>fast</em>, and <em>asynchronous</em> embed code intended for third-party Javascript.</h2>
+      </div>
+    </header>
+  </div>
+</body>
+</html>
