--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Lightning.js</title>
   <style>
+  
     body {
       background-color: #282828;
       background-image: url('bg.png');
@@ -117,7 +118,7 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="container animated bounceIn">
     <header>
       <h1>Lightning.js - A Safe, Fast, Asynchronous 3rd Party Javascript Embed Code</h1>
       <img src="logo.png" />
@@ -158,5 +159,123 @@
       });
     });
   </script>
+  <style>
+
+  .animated {
+  	-webkit-animation: 1s ease;
+  	-moz-animation: 1s ease;
+  	-ms-animation: 1s ease;
+  	-o-animation: 1s ease;
+  	animation: 1s ease;
+  }
+
+  @-webkit-keyframes bounceIn {
+  	0% {
+  		opacity: 0;
+  		-webkit-transform: scale(.3);
+  	}
+
+  	50% {
+  		opacity: 1;
+  		-webkit-transform: scale(1.05);
+  	}
+
+  	70% {
+  		-webkit-transform: scale(.9);
+  	}
+
+  	100% {
+  		-webkit-transform: scale(1);
+  	}
+  }
+
+  @-moz-keyframes bounceIn {
+  	0% {
+  		opacity: 0;
+  		-moz-transform: scale(.3);
+  	}
+
+  	50% {
+  		opacity: 1;
+  		-moz-transform: scale(1.05);
+  	}
+
+  	70% {
+  		-moz-transform: scale(.9);
+  	}
+
+  	100% {
+  		-moz-transform: scale(1);
+  	}
+  }
+
+  @-ms-keyframes bounceIn {
+  	0% {
+  		opacity: 0;
+  		-ms-transform: scale(.3);
+  	}
+
+  	50% {
+  		opacity: 1;
+  		-ms-transform: scale(1.05);
+  	}
+
+  	70% {
+  		-ms-transform: scale(.9);
+  	}
+
+  	100% {
+  		-ms-transform: scale(1);
+  	}
+  }
+
+  @-o-keyframes bounceIn {
+  	0% {
+  		opacity: 0;
+  		-o-transform: scale(.3);
+  	}
+
+  	50% {
+  		opacity: 1;
+  		-o-transform: scale(1.05);
+  	}
+
+  	70% {
+  		-o-transform: scale(.9);
+  	}
+
+  	100% {
+  		-o-transform: scale(1);
+  	}
+  }
+
+  @keyframes bounceIn {
+  	0% {
+  		opacity: 0;
+  		transform: scale(.3);
+  	}
+
+  	50% {
+  		opacity: 1;
+  		transform: scale(1.05);
+  	}
+
+  	70% {
+  		transform: scale(.9);
+  	}
+
+  	100% {
+  		transform: scale(1);
+  	}
+  }
+
+  .bounceIn {
+  	-webkit-animation-name: bounceIn;
+  	-moz-animation-name: bounceIn;
+  	-ms-animation-name: bounceIn;
+  	-o-animation-name: bounceIn;
+  	animation-name: bounceIn;
+  }
+  </style>
 </body>
 </html>
