--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <img src="logo.png" />
       <div id="tagline" class="box">
         <h2>LightningJS is a <em>safe</em>, <em>fast</em>, and <em>asynchronous</em> embed code intended for third-party Javascript.</h2>
-        <a class="button" href="http://github.com/olark/lightningjs">See The Code</a> or <a id="learn" href="https://github.com/olark/lightningjs/blob/master/README.md">The README</a>.
+        <a class="button" id="cta" href="http://github.com/olark/lightningjs">See The Code</a> or <a id="learn" href="https://github.com/olark/lightningjs/blob/master/README.md">The README</a>.
         <a id="olark-link" href="http://www.olark.com/">
           <div id="olark"><span id="builtby">Built By Olark</span><div id="olark-logo"> </div>
         </a>
@@ -276,6 +276,7 @@
   	-o-animation-name: bounceIn;
   	animation-name: bounceIn;
   }
+  
   </style>
 </body>
 </html>
