--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   </style>
 </head>
 <body>
-  <div class="container animated bounceIn">
+  <div class="container">
     <header>
       <h1>Lightning.js - A Safe, Fast, Asynchronous 3rd Party Javascript Embed Code</h1>
       <img src="logo.png" />
